--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <link href="mirrorui.css" rel="stylesheet" />
   <title>mirrorui-doc | mirror space</title>
   <style>
@@ -111,7 +111,7 @@
         <ul class="sidemenu-group">
           <li><span class="sidemenu-label">设计<i class="sidemenu-arrdown"></i></span></li>
           <li><a class="sidemenu-item" urlid="design_form">表单设计</a></li>
-          <li><a class="sidemenu-item" href="doc/cssicon/index.html" target="_blank">CSS图标</a></li>
+          <li><a class="sidemenu-item" href="/mirroricon/index.html" target="_blank">CSS图标</a></li>
         </ul>
       </m-sidemenu>
     </div>
