--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -55,6 +55,7 @@
           </li>
           <li><a class="sidemenu-item" urlid="about">关于</a></li>
           <li><a class="sidemenu-item" urlid="cssvar">css变量</a></li>
+          <li><a class="sidemenu-item" urlid="update">更新记录</a></li>
         </ul>
         <ul class="sidemenu-group">
           <li>
