--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -47,74 +47,94 @@
 </head>
 <body>
   <div class="container">
-    <div class="menu-box">
-      <m-sidemenu class="pd-b-30" id="main_menubox">
-        <ul class="sidemenu-group">
+    <div class="menu-box mg-l-10">
+      <m-docmenu class="pd-b-30" id="main_menubox">
+        <ul class="docmenu-group">
           <li>
-            <span class="sidemenu-label">概述<i class="sidemenu-arrdown"></i></span>
+            <span class="docmenu-title"><i class="docmenu-open"></i>概述</span>
           </li>
-          <li><a class="sidemenu-item" urlid="about">关于</a></li>
-          <li><a class="sidemenu-item" urlid="cssvar">css变量</a></li>
-          <li><a class="sidemenu-item" urlid="update">更新记录</a></li>
+          <li><a class="docmenu-item" urlid="about">关于</a></li>
+          <li><a class="docmenu-item" urlid="cssvar">css变量</a></li>
+          <li><a class="docmenu-item" urlid="update">更新记录</a></li>
         </ul>
-        <ul class="sidemenu-group">
+        <ul class="docmenu-group">
           <li>
-            <span class="sidemenu-label">布局<i class="sidemenu-arrdown"></i></span>
+            <span class="docmenu-title"><i class="docmenu-open"></i>布局</span>
           </li>
-          <li><a class="sidemenu-item" urlid="grids">册格</a></li>
-          <li><a class="sidemenu-item" urlid="mediaquery">媒体查询</a></li>
-          <li><a class="sidemenu-item" urlid="toolclass">工具样式</a></li>
-          <li><a class="sidemenu-item" urlid="pagelayout">页面布局</a></li>
+          <li><a class="docmenu-item" urlid="grids">册格</a></li>
+          <li><a class="docmenu-item" urlid="mediaquery">媒体查询</a></li>
+          <li><a class="docmenu-item" urlid="toolclass">工具样式</a></li>
+          <li><a class="docmenu-item" urlid="pagelayout">页面布局</a></li>
         </ul>
-        <ul class="sidemenu-group">
+        <ul class="docmenu-group">
           <li>
-            <span class="sidemenu-label">页面UI组件<i class="sidemenu-arrdown"></i></span>
+            <span class="docmenu-title"><i class="docmenu-open"></i>显示</span>
           </li>
-          <li><a class="sidemenu-item" urlid="h1h6p">大标题</a></li>
-          <li><a class="sidemenu-item" urlid="article">段落标题</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="btn">按钮</a></li>
-          <li><a class="sidemenu-item" urlid="btngroup">按钮组</a></li>
-          <li><a class="sidemenu-item" urlid="onoff">开关</a></li>
-          <li><a class="sidemenu-item" urlid="label">标签</a></li>
-          <li><a class="sidemenu-item" urlid="kvpair">名值标签</a></li>
-          <li><a class="sidemenu-item" urlid="imagedemo">图片</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="panel">面板</a></li>
-          <li><a class="sidemenu-item" urlid="msgpanel">信息面板</a></li>
-          <li><a class="sidemenu-item" urlid="hrline">hr分隔线</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="list">列表</a></li>
-          <li><a class="sidemenu-item" urlid="table">表格</a></li>
-          <li><a class="sidemenu-item" urlid="form">表单</a></li>
-          <li><a class="sidemenu-item" urlid="inputvalchange">监听输入</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="pageload">页面等待</a></li>
-          <li><a class="sidemenu-item" urlid="menubar">菜单条</a></li>
+          <li><a class="docmenu-item" urlid="h1h6p">大标题</a></li>
+          <li><a class="docmenu-item" urlid="article">段落标题</a></li>
+          <li><a class="docmenu-item" urlid="label">标签</a></li>
+          <li><a class="docmenu-item" urlid="kvpair">名值标签</a></li>
+          <li><a class="docmenu-item" urlid="imagedemo">图片</a></li>
+          <li><a class="docmenu-item" urlid="hrline">hr分隔线</a></li>
+          <li><a class="docmenu-item" urlid="pageload">页面等待</a></li>
         </ul>
-        <ul class="sidemenu-group">
+        <ul class="docmenu-group">
           <li>
-            <span class="sidemenu-label">功能组件<i class="sidemenu-arrdown"></i></span>
+            <span class="docmenu-title"><i class="docmenu-open"></i>容器</span>
           </li>
-          <li><a class="sidemenu-item" urlid="msgbox">弹出框</a></li>
-          <li><a class="sidemenu-item" urlid="msgshow">提示框</a></li>
-          <li><a class="sidemenu-item" urlid="datetime">日期时间</a></li>
-          <li><a class="sidemenu-item" urlid="pagenum">分页条</a></li>
-          <li><a class="sidemenu-item" urlid="range">范围滑块</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="sidemenu">侧边菜单</a></li>
-          <li><a class="sidemenu-item" urlid="mnavmenu">底部菜单</a></li>
-          <li><a class="sidemenu-item" urlid="mdirbar">顶部导航</a></li>
-          <li><b class="sidemenu-split"></b></li>
-          <li><a class="sidemenu-item" urlid="tabs">选项卡</a></li>
-          <li><a class="sidemenu-item" urlid="cachepage">缓存页</a></li>
+          <li><a class="docmenu-item" urlid="panel">面板</a></li>
+          <li><a class="docmenu-item" urlid="msgpanel">信息面板</a></li>
+          <li><a class="docmenu-item" urlid="tabs">选项卡</a></li>
+          <li><a class="docmenu-item" urlid="cachepage">缓存页</a></li>
         </ul>
-        <ul class="sidemenu-group">
-          <li><span class="sidemenu-label">设计<i class="sidemenu-arrdown"></i></span></li>
-          <li><a class="sidemenu-item" urlid="design_form">表单设计</a></li>
-          <li><a class="sidemenu-item" href="/mirroricon/index.html" target="_blank">CSS图标</a></li>
+        <ul class="docmenu-group">
+          <li>
+            <span class="docmenu-title"><i class="docmenu-open"></i>数据</span>
+          </li>
+          <li><a class="docmenu-item" urlid="list">列表</a></li>
+          <li><a class="docmenu-item" urlid="table">表格</a></li>
+          <li><a class="docmenu-item" urlid="form">表单</a></li>
         </ul>
-      </m-sidemenu>
+
+        <ul class="docmenu-group">
+          <li>
+            <span class="docmenu-title"><i class="docmenu-open"></i>功能</span>
+          </li>
+          <li>
+            <ul class="docmenu-group">
+              <li>
+                <span class="docmenu-title"><i class="docmenu-open"></i>常用</span>
+              </li>
+              <li><a class="docmenu-item" urlid="btn">按钮</a></li>
+              <li><a class="docmenu-item" urlid="btngroup">按钮组</a></li>
+              <li><a class="docmenu-item" urlid="onoff">开关</a></li>
+              <li><a class="docmenu-item" urlid="inputvalchange">监听输入</a></li>
+              <li><a class="docmenu-item" urlid="msgbox">弹出框</a></li>
+              <li><a class="docmenu-item" urlid="msgshow">提示框</a></li>
+              <li><a class="docmenu-item" urlid="datetime">日期时间</a></li>
+              <li><a class="docmenu-item" urlid="range">范围滑块</a></li>
+            </ul>
+          </li>
+          <li>
+            <ul class="docmenu-group">
+              <li>
+                <span class="docmenu-title"><i class="docmenu-open"></i>导航</span>
+              </li>
+              <li><a class="docmenu-item" urlid="docmenu">文档菜单</a></li>
+              <li><a class="docmenu-item" urlid="sidemenu">侧边菜单</a></li>
+              <li><a class="docmenu-item" urlid="mnavmenu">底部菜单</a></li>
+              <li><a class="docmenu-item" urlid="mdirbar">顶部导航</a></li>
+              <li><a class="docmenu-item" urlid="menubar">菜单条</a></li>
+              <li><a class="docmenu-item" urlid="pagenum">分页条</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="docmenu-group">
+          <li><span class="docmenu-title"><i class="docmenu-open"></i>设计</span></li>
+          <li><a class="docmenu-item" urlid="design_form">表单设计</a></li>
+          <li><a class="docmenu-item" href="/mirroricon/index.html" target="_blank">CSS图标</a></li>
+        </ul>
+      </m-docmenu>
     </div>
     <div class="content-box">
       <div class="tabsmenu-box">
@@ -150,8 +170,8 @@
       })
 
       // 主菜单
-      let sidemenu1 = $('#main_menubox')[0];
-      sidemenu1.create(null,
+      let docmenu1 = $('#main_menubox')[0];
+      docmenu1.create(null,
         (item, i) => {
           let urlid = $(item).prop('urlid');
           if (!urlid) return;
@@ -160,7 +180,7 @@
         });
 
       // 默认打开"关于"
-      sidemenu1.activeItem(0);
+      docmenu1.activeItem(0);
 
     })(window);
   </script>
