--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="menu-box mg-l-10">
+    <div class="menu-box pd-l-10">
       <m-docmenu class="pd-b-30" id="main_menubox">
         <ul class="docmenu-group">
           <li>
