docmenu组件优化更新

--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -62,115 +62,94 @@
     <div class="menu-box pd-l-10">
       <div class="theme-box bd bdr text-center"><span class="bg-white-0 text-black-1" id="themebtnlight">light</span><span class="bg-black-1 text-white-0" id="themebtndark">dark</span></div>
       <m-docmenu class="pd-b-30" id="main_menubox">
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>概述</span>
-          </li>
-          <li><a class="docmenu-item" urlid="about">关于</a></li>
-          <li><a class="docmenu-item" urlid="update">更新记录</a></li>
-        </ul>
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>布局</span>
-          </li>
-          <li><a class="docmenu-item" urlid="grids">册格</a></li>
-          <li><a class="docmenu-item" urlid="layoutline">线性排布</a></li>
-          <li><a class="docmenu-item" urlid="mediaquery">媒体查询</a></li>
-          <li><a class="docmenu-item" urlid="pagelayout">页面布局</a></li>
-          <li>
-            <ul class="docmenu-group">
-              <li>
-                <span class="docmenu-title"><i class="docmenu-open"></i>工具样式</span>
-              </li>
-              <li><a class="docmenu-item" urlid="tooltext">文本</a></li>
-              <li><a class="docmenu-item" urlid="toolborder">边框</a></li>
-              <li><a class="docmenu-item" urlid="toolcolor">颜色</a></li>
-              <li><a class="docmenu-item" urlid="toollayout">对齐</a></li>
-              <li><a class="docmenu-item" urlid="toolwidth">宽度</a></li>
-              <li><a class="docmenu-item" urlid="toolmgpd">边距补白</a></li>
-              <li><a class="docmenu-item" urlid="toolhv">显示隐藏</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>显示</span>
-          </li>
-          <li><a class="docmenu-item" urlid="h1h6p">大标题</a></li>
-          <li><a class="docmenu-item" urlid="label">标签</a></li>
-          <li><a class="docmenu-item" urlid="kvpair">标签对</a></li>
-          <li><a class="docmenu-item" urlid="imagedemo">图片</a></li>
-          <li><a class="docmenu-item" urlid="hrline">hr分隔线</a></li>
-          <li><a class="docmenu-item" urlid="pageload">页面等待</a></li>
-        </ul>
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>容器</span>
-          </li>
-          <li><a class="docmenu-item" urlid="panel">面板</a></li>
-          <li><a class="docmenu-item" urlid="msgpanel">信息面板</a></li>
-          <li><a class="docmenu-item" urlid="tabs">标签页</a></li>
-          <li><a class="docmenu-item" urlid="cachepage">缓存页</a></li>
-        </ul>
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>数据</span>
-          </li>
-          <li><a class="docmenu-item" urlid="list">列表</a></li>
-          <li><a class="docmenu-item" urlid="table">表格</a></li>
-          <li>
-            <ul class="docmenu-group">
-              <li>
-                <span class="docmenu-title"><i class="docmenu-open"></i>表单</span>
-              </li>
-              <li><a class="docmenu-item" urlid="input">文本框</a></li>
-              <li><a class="docmenu-item" urlid="select">选择框</a></li>
-              <li><a class="docmenu-item" urlid="file">文件</a></li>
-              <li><a class="docmenu-item" urlid="check">单多选</a></li>
-              <li><a class="docmenu-item" urlid="formlayout">布局</a></li>
-            </ul>
-          </li>
-        </ul>
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>概述</span>
+          <a class="docmenu-item" urlid="about">关于</a>
+          <a class="docmenu-item" urlid="update">更新记录</a>
+        </div>
 
-        <ul class="docmenu-group">
-          <li>
-            <span class="docmenu-title"><i class="docmenu-open"></i>功能</span>
-          </li>
-          <li>
-            <ul class="docmenu-group">
-              <li>
-                <span class="docmenu-title"><i class="docmenu-open"></i>常用</span>
-              </li>
-              <li><a class="docmenu-item" urlid="btn">按钮</a></li>
-              <li><a class="docmenu-item" urlid="btngroup">按钮组</a></li>
-              <li><a class="docmenu-item" urlid="onoff">开关</a></li>
-              <li><a class="docmenu-item" urlid="inputvalchange">监听输入</a></li>
-              <li><a class="docmenu-item" urlid="msgbox">弹出框</a></li>
-              <li><a class="docmenu-item" urlid="msgshow">提示框</a></li>
-              <li><a class="docmenu-item" urlid="datetime">日期时间</a></li>
-              <li><a class="docmenu-item" urlid="range">范围滑块</a></li>
-            </ul>
-          </li>
-          <li>
-            <ul class="docmenu-group">
-              <li>
-                <span class="docmenu-title"><i class="docmenu-open"></i>导航</span>
-              </li>
-              <li><a class="docmenu-item" urlid="docmenu">文档菜单</a></li>
-              <li><a class="docmenu-item" urlid="sidemenu">侧边菜单</a></li>
-              <li><a class="docmenu-item" urlid="mnavmenu">底部菜单</a></li>
-              <li><a class="docmenu-item" urlid="mdirbar">顶部导航</a></li>
-              <li><a class="docmenu-item" urlid="menubar">菜单条</a></li>
-              <li><a class="docmenu-item" urlid="pagenum">分页条</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="docmenu-group">
-          <li><span class="docmenu-title"><i class="docmenu-open"></i>设计</span></li>
-          <li><a class="docmenu-item" urlid="color">颜色</a></li>
-          <li><a class="docmenu-item" urlid="design_form">表单设计</a></li>
-          <li><a class="docmenu-item" href="/mirroricon/index.html" target="_blank">CSS图标</a></li>
-        </ul>
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>布局</span>
+          <a class="docmenu-item" urlid="grids">册格</a>
+          <a class="docmenu-item" urlid="layoutline">线性排布</a>
+          <a class="docmenu-item" urlid="mediaquery">媒体查询</a>
+          <a class="docmenu-item" urlid="pagelayout">页面布局</a>
+
+          <div class="docmenu-group">
+            <span class="docmenu-title"><i class="docmenu-open"></i>工具样式</span>
+            <a class="docmenu-item" urlid="tooltext">文本</a>
+            <a class="docmenu-item" urlid="toolborder">边框</a>
+            <a class="docmenu-item" urlid="toolcolor">颜色</a>
+            <a class="docmenu-item" urlid="toollayout">对齐</a>
+            <a class="docmenu-item" urlid="toolwidth">宽度</a>
+            <a class="docmenu-item" urlid="toolmgpd">边距补白</a>
+            <a class="docmenu-item" urlid="toolhv">显示隐藏</a>
+          </div>
+        </div>
+
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>显示</span>
+          <a class="docmenu-item" urlid="h1h6p">大标题</a>
+          <a class="docmenu-item" urlid="label">标签</a>
+          <a class="docmenu-item" urlid="kvpair">标签对</a>
+          <a class="docmenu-item" urlid="imagedemo">图片</a>
+          <a class="docmenu-item" urlid="hrline">hr分隔线</a>
+          <a class="docmenu-item" urlid="pageload">页面等待</a>
+        </div>
+
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>容器</span>
+          <a class="docmenu-item" urlid="panel">面板</a>
+          <a class="docmenu-item" urlid="msgpanel">信息面板</a>
+          <a class="docmenu-item" urlid="tabs">标签页</a>
+          <a class="docmenu-item" urlid="cachepage">缓存页</a>
+        </div>
+
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>数据</span>
+          <a class="docmenu-item" urlid="list">列表</a>
+          <a class="docmenu-item" urlid="table">表格</a>
+          <div class="docmenu-group">
+            <span class="docmenu-title"><i class="docmenu-open"></i>表单</span>
+            <a class="docmenu-item" urlid="input">文本框</a>
+            <a class="docmenu-item" urlid="select">选择框</a>
+            <a class="docmenu-item" urlid="file">文件</a>
+            <a class="docmenu-item" urlid="check">单多选</a>
+            <a class="docmenu-item" urlid="formlayout">布局</a>
+          </div>
+        </div>
+
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>功能</span>
+          <div class="docmenu-group">
+            <span class="docmenu-title"><i class="docmenu-open"></i>常用</span>
+            <a class="docmenu-item" urlid="btn">按钮</a>
+            <a class="docmenu-item" urlid="btngroup">按钮组</a>
+            <a class="docmenu-item" urlid="onoff">开关</a>
+            <a class="docmenu-item" urlid="inputvalchange">监听输入</a>
+            <a class="docmenu-item" urlid="msgbox">弹出框</a>
+            <a class="docmenu-item" urlid="msgshow">提示框</a>
+            <a class="docmenu-item" urlid="datetime">日期时间</a>
+            <a class="docmenu-item" urlid="range">范围滑块</a>
+          </div>
+
+          <div class="docmenu-group">
+            <span class="docmenu-title"><i class="docmenu-open"></i>导航</span>
+            <a class="docmenu-item" urlid="docmenu">文档菜单</a>
+            <a class="docmenu-item" urlid="sidemenu">侧边菜单</a>
+            <a class="docmenu-item" urlid="mnavmenu">底部菜单</a>
+            <a class="docmenu-item" urlid="mdirbar">顶部导航</a>
+            <a class="docmenu-item" urlid="menubar">菜单条</a>
+            <a class="docmenu-item" urlid="pagenum">分页条</a>
+          </div>
+        </div>
+
+        <div class="docmenu-group">
+          <span class="docmenu-title"><i class="docmenu-open"></i>设计</span>
+          <a class="docmenu-item" urlid="color">颜色</a>
+          <a class="docmenu-item" urlid="design_form">表单设计</a>
+          <a class="docmenu-item" href="/mirroricon/index.html" target="_blank">CSS图标</a>
+        </div>
       </m-docmenu>
     </div>
     <div class="content-box">
@@ -219,7 +198,7 @@
         });
 
       // 默认打开"关于"
-      docmenu1.activeItem(10);
+      docmenu1.activeItem(38);
 
       // 彩色变量
       win.themecolors = ['red', 'orange', 'yellow', 'green', 'sky', 'blue', 'purple', 'pink'];
