文档修正.增加去掉主题版本

--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -24,7 +24,7 @@
       overflow-y: auto;
     }
 
-    .tabsmenu-box, .theme-box {
+    .tabsmenu-box {
       position: sticky;
       top: 0;
       width: 99%;
