组件改版完成
错误修正,文档修正,此次大改版完成.

--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -186,7 +186,7 @@
       // 默认打开"关于"
       docmenu1.activeItem(
         (() => {
-          let urlid = 'about';
+          let urlid = 'color';
           let menus = $('#main_menubox .docmenu-item');
 
           for (var i = 0; i < menus.length; i++) {
