--- a/mirrorui/index.html
+++ b/mirrorui/index.html
@@ -186,7 +186,7 @@
       // 默认打开"关于"
       docmenu1.activeItem(
         (() => {
-          let urlid = 'color';
+          let urlid = 'about';
           let menus = $('#main_menubox .docmenu-item');
 
           for (var i = 0; i < menus.length; i++) {
